fix album image being cropped when viewed in mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     height: 100vh;
     font-size: 14px;
+    position: relative;
+    background-color: #121212;
 }
 
 h6 {
@@ -9,7 +11,6 @@ h6 {
 
 img {
     max-width: 100%;
-    height: 100%;
     height: auto;
 }
 
@@ -45,25 +46,23 @@ img {
 
     /* Center and scale the image nicely */
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: norepeat;
     background-size: cover;
 }
 
-.wrapper {
+.content {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
+    top: 0px;
+    bottom: 0px;
+    z-index: 10;
 }
 
 .blur-filter {
     background: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(20px);
-    position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 0;
 }
 
 .btn {
